# simian

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  deploy-vm.yml
ansible/: ansible.cfg  inventory.ini  playbook.yml
db/migrations/: V1__create_dna_table.sql
public/swagger/: index.html  openapi.yaml
src/: app.cpp  app.hpp  main.cpp
src/controllers/: dna_controller.cpp  dna_controller.hpp  stats_controller.cpp  stats_controller.hpp
src/models/: dna_record.hpp
src/routes/: routes.cpp  routes.hpp
src/services/: cache_service.cpp  cache_service.hpp  db_service.cpp  db_service.hpp  dna_service.cpp  dna_service.hpp
src/utils/: file.cpp  hash.cpp  hash.hpp
